- Fixed problem with log out and help not showing in IE7
git-svn-id: https://opensource.kantega.no/svn/openaksess/trunk@1295 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/admin/css/default_ie7.css
+++ b/modules/webapp/src/webapp/admin/css/default_ie7.css
@@ -1,3 +1,5 @@
 #ModesMenu .buttonGroup .button.last {
     background: url("../bitmaps/default/framework/modus_btn_right.png") right center no-repeat
 }
+/* Fix because ie7 can't handle floats properly */
+#TopMenu a.menuitem.logout, #TopMenu a.menuitem.help { position:relative; top:-29px }
